[gd_scene load_steps=13 format=3 uid="uid://3vqa0cl8knwk"]

[ext_resource type="PackedScene" uid="uid://bfmjbl00kj2vc" path="res://Scenes/Components/hurtbox.tscn" id="1_5ojqh"]
[ext_resource type="Script" path="res://Scripts/Characters/Drone/drone.gd" id="1_eohl6"]
[ext_resource type="Resource" uid="uid://bgvbqrpm86xjx" path="res://Data/Movement Data/Drone Movement Data.tres" id="2_v7eu0"]
[ext_resource type="Resource" uid="uid://dyuynlilhpdpr" path="res://Data/Stats/Drone_Stats.tres" id="3_jeffn"]
[ext_resource type="Texture2D" uid="uid://6jebehbxdvj3" path="res://Textures/UI/Bat Health Bar Empty.png" id="5_52e0i"]
[ext_resource type="Texture2D" uid="uid://e7mb2pjdc27o" path="res://Textures/UI/Bat Health Bar.png" id="6_cuwue"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jce5w"]
size = Vector2(20, 7)

[sub_resource type="Animation" id="Animation_sy7c1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Polygon2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_sc6v8"]
resource_name = "fly_left"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Polygon2D:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.174533]
}

[sub_resource type="Animation" id="Animation_yu1nd"]
resource_name = "fly_right"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Polygon2D:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ygq5k"]
_data = {
"RESET": SubResource("Animation_sy7c1"),
"fly_left": SubResource("Animation_sc6v8"),
"fly_right": SubResource("Animation_yu1nd")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_iq44y"]
radius = 34.0

[node name="Drone" type="CharacterBody2D" groups=["Drone", "Player"]]
script = ExtResource("1_eohl6")
movement_data = ExtResource("2_v7eu0")
stats = ExtResource("3_jeffn")
energy = 9999.0

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(-2.58287e-07, -3.02045)
scale = Vector2(0.333333, 0.2782)
offset = Vector2(0.999999, 10.8571)
polygon = PackedVector2Array(-31, -19, -1.00028, -19, 29, -19, 29, 0, -31, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3.5)
shape = SubResource("RectangleShape2D_jce5w")

[node name="Hurtbox" parent="." instance=ExtResource("1_5ojqh")]

[node name="FlyAnimator" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_ygq5k")
}

[node name="ActivationArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivationArea"]
shape = SubResource("CircleShape2D_iq44y")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -10.0
offset_top = -19.0
offset_right = 10.0
offset_bottom = -15.0
max_value = 10.0
value = 10.0
nine_patch_stretch = true
texture_under = ExtResource("5_52e0i")
texture_progress = ExtResource("6_cuwue")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[connection signal="body_entered" from="ActivationArea" to="." method="_on_activation_area_body_entered"]
